@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd June 28, 2010
+.Dd November 1, 2010
 .Dt ATF-C-API 3
 .Os
 .Sh NAME
@@ -233,11 +233,21 @@ Both of them are strings.
 The test case has read-only access to the current configuration variables
 by means of the
 .Ft bool
-.Fn atf_tc_has_config_var
-and the
+.Fn atf_tc_has_config_var ,
 .Ft const char *
-.Fn atf_tc_get_config_var
-methods, which can be called in any of the three parts of a test case.
+.Fn atf_tc_get_config_var ,
+.Ft const char *
+.Fn atf_tc_get_config_var_wd ,
+.Ft bool
+.Fn atf_tc_get_config_var_as_bool ,
+.Ft bool
+.Fn atf_tc_get_config_var_as_bool_wd ,
+.Ft long
+.Fn atf_tc_get_config_var_as_long ,
+and the
+.Ft long
+.Fn atf_tc_get_config_var_as_long_wd
+functions, which can be called in any of the three parts of a test case.
 .Ss Access to the source directory
 It is possible to get the path to the test case's source directory from any
 of its three components by querying the
